--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       var imagini = [];
       var width = 100;
       var height = 125; 
-      var surse = ['aluminiu.png' , 'lemn.png' , 'cupru.png','plastic.png','inox.png','sticla.png','aur.png','hartie.png','germaniu.png','siliciu.png','seleniu.png','diamant.png','staniu.png','teluriu.png','grafit.png'];
+      var surse = ['aluminiu.png' , 'lemcorect.png' , 'cupru.png','plastic.png','inox.png','sticla.png','aur.png','hartie.png','germaniu.png','siliciu.png','seleniu.png','diamant.png','staniu.png','teluriu.png','grafit.png'];
       var paritate;
       var on = 0;
       var working = 0;
