--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         canvas {
         border: 2px solid black;
         border-radius: 30px;
+        margin:auto;
        
     }
 </style>
@@ -216,10 +217,11 @@
     </table>
 </div>
 <br><br><br><br><br><br><br><br>
-  <canvas id="patrat" width="1462" height="820"></canvas>
+
+  <canvas id="patrat" width="1462" height="820" ></canvas>
  
   <script>
- 
+    
       var canvas = document.getElementById("patrat");
       var randamm=0;
       var circuit = new Image;
