--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <p>Circuitul este ideal</p>
     <p>Pentru toate materialele: S=1 cm^2 și l=2 cm</p>
     <p>Toate valorile sunt comparate cu cuprul</p>
+    <p>Pentru a putea muta materialul, acesta trebuie sa treaca printr-un ciclu complet on/off</p>
     <table align="center">
         <thead>
             <tr>
