--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
       var circuit = new Image;
       circuit.src='circuit.png';
       var switcho = new Image;
-      switcho.src='switch_on.png';
+      switcho.src='switch_aprins.png';
       var switchf = new Image;
-      switchf.src='switch_off.png';
+      switchf.src='switch_stins.png';
       var becs = new Image;
       becs.src='bec_off.png';
       var beca = new Image;
