--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         Pentru conductorii de ordinul II, la fel ca si pentru cei de ordinul I se aplica legea lui Ohm:
 
     </p>
-    <img src="formula1.png">
+    <img src="formula1.png" alt="formula1">
     <p>unde E este tensiunea in volti; R rezistenta in ohmi (Ω) si I intensitatea curentului in amperi
         Rezistenta conductorilor de ordinul I este data de relatia:</p>
-        <img src="formula2.png">
+        <img src="formula2.png" alt="formula2">
 </div>
 <br><br><br><br><br><br><br><br>
 <div class="quest">
@@ -73,7 +73,7 @@
     <p>Materialele conductoare sunt cele care pot conduce electricitatea într-o măsură mai mare sau
         mai mică. Aceste tipuri de materiale permit electronilor să circule liber și fluid dintr-un punct
         în altul dacă sunt conectați la o sursă de energie. </p>
-        <img src="desen1.png">
+        <img src="desen1.png" alt="desen">
 </div>
 <br><br><br><br><br><br><br><br>
 <div class="quest">
